[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/characters/agnette/agnette_walk_1.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/agnette/agnette_idle_2.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/agnette/agnette_walk_2.png" type="Texture" id=3]
[ext_resource path="res://scripts/characters/Agnette.gd" type="Script" id=4]
[ext_resource path="res://assets/characters/agnette/agnette_dash.png" type="Texture" id=5]
[ext_resource path="res://assets/weapons/agnette_bow_1.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/chargebar_charging.png" type="Texture" id=7]
[ext_resource path="res://scenes/particles/ChargingParticle.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/weapons/agnette_bow_2.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/healthbar_empty.png" type="Texture" id=10]
[ext_resource path="res://assets/weapons/agnette_bow_3.png" type="Texture" id=11]
[ext_resource path="res://assets/weapons/agnette_bow_4.png" type="Texture" id=12]
[ext_resource path="res://scenes/particles/StrongJumpParticle.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Dash",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=20]
resource_name = "BowAttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BowSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 63.4052, 39.1389 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 66.6314, 55.1411 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 45.9563
height = 17.3718

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 42.0083, 40 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 100, 50 )

[node name="Agnette" type="Node2D"]
script = ExtResource( 4 )

[node name="ChargingParticle" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( -1.43051e-06, 0 )
amount = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5.25, 5.25 )
frames = SubResource( 1 )
animation = "Dash"

[node name="BowAnimationPlayer" type="AnimationPlayer" parent="."]
anims/BowAttackRight = SubResource( 20 )

[node name="BowSprite" type="Sprite" parent="."]
position = Vector2( 43, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 12 )
flip_h = true

[node name="AttackCollision" type="Area2D" parent="." groups=["MediumPoiseDamage", "Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 100, 5.059 )
shape = SubResource( 5 )
disabled = true

[node name="ChargedAttackCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargedAttackCollision"]
position = Vector2( 102.213, -11.0022 )
shape = SubResource( 9 )

[node name="MeleeTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ChargeBar" type="TextureProgress" parent="."]
visible = false
margin_left = -49.805
margin_top = -102.36
margin_right = -29.805
margin_bottom = -96.36
rect_scale = Vector2( 5, 5 )
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 0.0585399 )
shape = SubResource( 8 )

[node name="ResetAttackStringTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargedAttackCooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AirborneMaxDuration" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="EnemyEvasionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyEvasionArea"]
position = Vector2( 42, 0 )
shape = SubResource( 17 )

[node name="InputPressTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AirborneTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TempusTardusTriggerCD" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="KnockAirborneICD" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="StrongJumpParticle" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 130, 45 )
scale = Vector2( 2, 2 )
emitting = true
one_shot = false

[node name="SpecialAttackArea2D" type="Area2D" parent="." groups=["Ice", "SulphuricSigilTrigger"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecialAttackArea2D"]
position = Vector2( 148.451, -0.00581169 )
shape = SubResource( 19 )
disabled = true

[node name="SpecialAttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SpecialSequenceWindow" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="DashInputPressTimer" type="Timer" parent="."]
wait_time = 0.475
one_shot = true

[connection signal="area_entered" from="AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="area_exited" from="AttackCollision" to="." method="_on_AttackCollision_area_exited"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_MeleeTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ResetAttackStringTimer" to="." method="_on_ResetAttackStringTimer_timeout"]
[connection signal="area_entered" from="EnemyEvasionArea" to="." method="_on_EnemyEvasionArea_area_entered"]
[connection signal="area_exited" from="EnemyEvasionArea" to="." method="_on_EnemyEvasionArea_area_exited"]
[connection signal="timeout" from="AirborneTimer" to="." method="_on_AirborneTimer_timeout"]
[connection signal="timeout" from="SpecialAttackTimer" to="." method="_on_SpecialAttackTimer_timeout"]
[connection signal="timeout" from="SpecialSequenceWindow" to="." method="_on_Special4thSequenceWindow_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="DashInputPressTimer" to="." method="_on_DashInputPressTimer_timeout"]
